# permamodel

./: .bmi.yaml  .gitignore  .landscape.yaml  .travis.yml  CHANGES.md  CITATION.cff  FrostnumberGeo_WMT_output.nc  LICENSE  MANIFEST.in  README.md  environment.yml  noxfile.py  pyproject.toml  requirements.txt  run_bmi-tester_frostnumber  run_test_BMI_ku_model.py  setup.cfg  setup.py
.bmi/frost_number/: api.yaml  frostnumber_model.cfg.tmpl  frostnumber_model.cfg.tmpl.yaml  info.yaml  parameters.yaml
.bmi/frost_number_Geo/: api.yaml  frostnumber_Geo_model.cfg.tmpl  info.yaml  parameters.yaml
.bmi/ku/: T_air.txt  api.yaml  dvt.txt  h_snow.txt  info.yaml  ku_model.cfg.tmpl  parameters.yaml  rho_snow.txt  untitled text.py  vwc.txt
.bmi/ku_geo/: api.yaml  info.yaml  ku_geo_model.cfg.tmpl  parameters.yaml
.github/workflows/: format.yml  test.yml
Parameters/: T_OC.nc4  T_SILT.nc4  Typical_Thermal_Parameters.csv
ThawLake_FromMontek/: setup.py  setup.py~
ThawLake_FromMontek/oldercodewithViZ/: Python_tha_test.py
ThawLake_FromMontek/thalake/: bmithalake.py  radin_dailyavg.csv  thalake.py
ThawLake_FromMontek/thalake.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bmi-giplf90_v0.1/: LICENSE  README.md  plot_input_data.ipynb  plot_results.ipynb
bmi-giplf90_v0.1/bmi/: bmi_impl.f90  bmif.pc
bmi-giplf90_v0.1/examples/: bound.txt  gipl_cfg.cfg  grid.txt  initial.txt  mesres.txt  mineral.txt  organic.txt  rsnow.txt  sites.txt  snow.txt
bmi-giplf90_v0.1/testing/: CMakeLists.txt  get_value_test.f90  irf_test.f90  set_value_test.f90
coupling/: FNGeo_component.cfg  KuGeo_component.cfg  couple_cru_FNGeo.py  couple_cru_KuGeo.py  cruAKtemp_component.cfg
notebooks/: Barrow_ALT.nc  Barrow_TPS.nc  DH_2008_2015.csv  Fairbanks_ALT.nc  Fairbanks_TPS.nc  KuFlex.ipynb  Ku_2D.ipynb  Ku_BR.ipynb  Ku_FB.ipynb  Ku_Single.ipynb  Ku_TS.ipynb  case_test_ALT.nc  case_test_TPS.nc  example_of_Ku_method.ipynb  example_of_frostnumber_method.ipynb  example_of_gipl_model.ipynb  example_of_permafrost_component_call.ipynb
permamodel/: README.rst  __init__.py  setup.py
permamodel/components/: Ku.py  KuFlex_method.py  Ku_component.py  Ku_method.py  __init__.py  bmi_Ku.py  bmi_KuFlex_component.py  bmi_Ku_component.py  bmi_frost_number.py  bmi_frost_number_2D.py  bmi_frost_number_Geo.py  frost_number.py  frost_number_2D.py  frost_number_Geo.py  gipl_component.py  kuflex.py  perma_base.py
permamodel/data/: T_CLAY.nc4  T_SAND.nc4  Typical_Thermal_Parameters.csv
permamodel/examples/: Barrow_TPS.nc  KuFlex_method.cfg  (+48 more)
(+78 files in other folders)
